--- a/back-end/package.json
+++ b/back-end/package.json
@@ -1,14 +1,11 @@
 {
-  "name": "P9-front-end-dashboard",
+  "name": "back-end",
   "version": "1.0.0",
   "description": "Backend for the 9th project of the new path Front-end Developper",
   "main": "index/app.js",
   "repository": "https://github.com/OpenClassrooms-Student-Center/P9-front-end-dashboard.git",
   "author": "tdimnet <thomas.dimnet@gmail.com>",
   "license": "MIT",
-  "devDependencies": {
-    "nodemon": "^2.0.4"
-  },
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
