--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@juggle/resize-observer": "^3.4.0",
     "axios": "^1.6.8",
     "d3": "^7.9.0",
     "react": "^18.2.0",
